fix: spacing

--- a/src/Components/Resume/Scoop/scoop.scss
+++ b/src/Components/Resume/Scoop/scoop.scss
@@ -39,7 +39,7 @@
         display:grid;
         grid-gap:15px;
         margin:25px 0;
-        grid-template-columns: auto 1fr;
+        grid-template-columns: auto 150px;
         
         // nested utility
         .title{
